Bug 1428650 Make ServiceWorkerManager::MaybeClaimClient() handle inconsistent child-process SWM state. r=asuth